--- a/ui/public/global.css
+++ b/ui/public/global.css
@@ -1,63 +1,25 @@
-html, body {
-	position: relative;
-	width: 100%;
-	height: 100%;
-}
-
-body {
-	color: #333;
+* {
 	margin: 0;
-	padding: 8px;
-	box-sizing: border-box;
-	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+	padding: 0;
+	font-family: "Gill Sans", sans-serif;
 }
 
-a {
-	color: rgb(0,100,200);
-	text-decoration: none;
+
+
+:root {
+	/* DARK THEME COLORS */
+	--dark-grey: #252525;
+	--lighter-dark-grey: #2b2b2b;
+	--lightest-grey: #3a3a3a;
+	--accent-red: #ed553b;
+	--accent-green: #3caea3;
+	--accent-light: #ffffff;
+	/* LIGHT THEME COLORSf */
+
+
 }
 
-a:hover {
-	text-decoration: underline;
-}
 
-a:visited {
-	color: rgb(0,80,160);
-}
-
-label {
-	display: block;
-}
-
-input, button, select, textarea {
-	font-family: inherit;
-	font-size: inherit;
-	-webkit-padding: 0.4em 0;
-	padding: 0.4em;
-	margin: 0 0 0.5em 0;
-	box-sizing: border-box;
-	border: 1px solid #ccc;
-	border-radius: 2px;
-}
-
-input:disabled {
-	color: #ccc;
-}
-
-button {
-	color: #333;
-	background-color: #f4f4f4;
-	outline: none;
-}
-
-button:disabled {
-	color: #999;
-}
-
-button:not(:disabled):active {
-	background-color: #ddd;
-}
-
-button:focus {
-	border-color: #666;
+.dark-mode {
+	background-color: var(--dark-grey);
 }
