--- a/ui/public/global.css
+++ b/ui/public/global.css
@@ -1,9 +1,8 @@
 * {
 	margin: 0;
 	padding: 0;
-	font-family: "Gill Sans", sans-serif;
+	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
-
 
 
 :root {
@@ -13,13 +12,31 @@
 	--lightest-grey: #3a3a3a;
 	--accent-red: #ed553b;
 	--accent-green: #3caea3;
-	--accent-light: #ffffff;
+	--accent-light: #FFFFFF;
 	/* LIGHT THEME COLORSf */
 
-
+	--light-blue--: #3ACCE1;
+	--blue--: #5773FF;
+	--light-green--: #80E8B1;
+	--cream-white--: #FAFAFA;
+	--white--: #FFFFFF;
+	--text--: #454F63;
+	--lighter-grey--: #B5B9C0;
 }
 
 
 .dark-mode {
 	background-color: var(--dark-grey);
+}
+
+.light-mode {
+	background-color: var(--cream-white--);
+	color: var(--text--);
+}
+
+
+section {
+	background-color: var(--white--);
+	width: 100%;
+	height: 100vh;
 }
