--- a/ui/public/css/window_layout.css
+++ b/ui/public/css/window_layout.css
@@ -3,3 +3,25 @@
     width: 100vw;
     height: 100vh;
 }
+
+
+/* width */
+::-webkit-scrollbar {
+    width: 1px;
+    height: 1px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+    background: transparent;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: transparent;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: transparent;
+}
