Fixed issue with menubar not being fixed to left side. Changed Nav size
Added extra media queries to handle navigation resizing and more device layouts with the main content.

--- a/ui/public/global.css
+++ b/ui/public/global.css
@@ -39,7 +39,16 @@ section {
 	background-color: var(--cream-white--);
 	width: 100%;
 	height: 100vh;
+	margin-left: 180px;
 }
+
+/* handle left-navigation bar being fixed :(  */
+@media only screen and (max-width: 1320px) {
+
+	section {
+		margin-left: 60px;
+	}
+ }
 
 
 .flex {
