--- a/ui/public/global.css
+++ b/ui/public/global.css
@@ -4,6 +4,14 @@
 	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
+body {
+	-webkit-app-region: drag;
+}
+
+a, button, p, h1, h2, h3, h4, h5, h6, 
+input, canvas, svg, select {
+	-webkit-app-region: no-drag;
+}
 
 :root {
 	/* DARK THEME COLORS */
